--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -24,7 +24,7 @@
             %a.social-media-link.instagram{'href' => 'https://instagram.com/bdhowald', 'target' => '_blank'}
               %i.fa.fa-2x.fa-instagram
               %span.sr-only
-                Facebook Account of Brian Howald
+                Instagram Account of Brian Howald
 
         %div.footer-row
 
