--- a/app/views/application/_campaign.html.haml
+++ b/app/views/application/_campaign.html.haml
@@ -2,22 +2,22 @@
 - selected_campaigns       = @selected_campaigns || []
 - campaign_domain          = 'https://campaigns.transalt.org'
 
-
-%div.col-sm-6.col-md-4
+%div{class: "col-sm-6 col-md-4 row-item #{'list-row-item' if @view_style == 'list'}"}
   %div.card
-    %div.campaign{class: "#{campaigns_already_signed.include?(campaign.id) ? 'already-signed' : ''} #{selected_campaigns.include?(campaign.id) ? 'to-be-signed' : ''}", 'data-campaign-id' => campaign.id}
+    %div.campaign{class: "#{campaigns_already_signed.include?(campaign.id) ? 'already-signed' : ''} #{selected_campaigns.include?(campaign.id) ? 'to-be-signed' : ''}", 'id' => "campaign-#{campaign.id}", 'data-campaign-id' => campaign.id}
 
-      %div.card-body
+      %div.card-top
+        %div.card-body
+          // Use styles of h3, but use h1 for accessibility.
+          %h1.h3.card-title.campaign-name{'data-full-name' => campaign.name, 'data-shortened-name' => string_with_ellipses(campaign.name, 50)}
+            / = link_to(campaign.name, campaign.full_url)
+            = string_with_ellipses(campaign.name, 50)
 
-        // Use styles of h3, but use h1 for accessibility.
-        %h1.h3.card-title.campaign-name{'data-full-name' => campaign.name, 'data-shortened-name' => string_with_ellipses(campaign.name, 50)}
-          / = link_to(campaign.name, campaign.full_url)
-          = string_with_ellipses(campaign.name, 50)
+          %div.card-text
+            %div.d-block.d-md-none
+              %a.expand-campaign{href: '#'}
+                see campaign description
 
-        %div.card-text
-          %div.d-block.d-md-none
-            %a.expand-campaign{href: '#'}
-              see campaign description
 
       %ul.campaign-details.list-group-flush
 
@@ -28,12 +28,15 @@
               Campaign Won!
 
         %li.list-group-item.d-none.d-md-block.description-list-item
-          %div.card-text.campaign-description
-          / = campaign.shortened_description.html_safe
-          = (string_with_ellipses(campaign.description_first_paragraph, 200) + link_to(' (see more)', campaign.full_url, {class: 'campaign-link', target: '_blank'})).html_safe
+          %div.card-text.campaign-description.grid-view
+            / = campaign.shortened_description.html_safe
+            = (string_with_ellipses(campaign.description_first_paragraph, 200) + link_to(' (see more)', campaign.full_url, {class: 'campaign-link', target: '_blank'})).html_safe
+          %div.card-text.campaign-description.list-view
+            = (string_with_ellipses(campaign.description, 400) + link_to(' (see more)', campaign.full_url, {class: 'campaign-link', target: '_blank'})).html_safe
 
-        %li.list-group-item.d-none.d-md-block.signatures-list-item
-          = "Signatures: #{number_with_delimiter(campaign.num_signatures, :delimiter => ',')}"
+        %li.list-group-item.d-none.d-md-block.signatures-list-item>
+          %span.signatures
+            = "Signatures: #{number_with_delimiter(campaign.num_signatures, :delimiter => ',')}"
 
           %div.progress
             - percentage_complete = (campaign.num_signatures.to_f / campaign.signatures_needed) * 100
@@ -48,7 +51,7 @@
             %div{'class' => "#{progress_class} progress-bar", 'role' => "progressbar", 'style' => "width: #{(percentage_complete < 15 ? 15 : percentage_complete)}%", 'aria-valuenow' => "#{percentage_complete}", 'aria-valuemin' => '0', 'aria-valuemax' => '100', 'aria-label' => "#{percentage_complete.to_i}% of signatures needed to reach campaign goal."}
               = "#{percentage_complete.to_i}%"
 
-        %li.list-group-item.d-none.d-md-block.campaign-starter-list-item
+        %li.list-group-item.d-none.d-md-block.campaign-starter-list-item>
           %div{'aria-labelledby' => "started-by-text-#{campaign.id} starter-#{campaign.id}"}
             %span.started-by-text{id: "started-by-text-#{campaign.id}", 'aria-hidden' => 'true'}
               Started by:
@@ -57,17 +60,17 @@
             %span.sr-only
               = "Started by #{campaign.starter}"
 
-        %li.list-group-item.d-none.d-md-block.social-media-list-item
-          %span.share-text
+        %li.list-group-item.d-none.d-md-block.social-media-list-item>
+          %div.social-media-items
 
-          %a.social-media-share-link.twitter-link{'href' => "https://twitter.com/intent/tweet?status=Sign the petition #{campaign.name}%0A#{campaign_domain}#{campaign.link}", 'target' => '_blank', 'aria-label' => 'Share campaign to Twitter'}
-            %i.fa.fa-2x.fa-twitter-square
+            %a.social-media-share-link.twitter-link{'href' => "https://twitter.com/intent/tweet?status=Sign the petition #{campaign.name}%0A#{campaign_domain}#{campaign.link}", 'target' => '_blank', 'aria-label' => 'Share campaign to Twitter'}
+              %i.fa.fa-2x.fa-twitter-square
 
-          %a.social-media-share-link.facebook-link{'href' => "https://www.facebook.com/sharer/sharer.php?u=#{campaign_domain}#{campaign.link}&title=#{campaign.name}", 'target' => '_blank', 'aria-label' => 'Share campaign to Facebook'}
-            %i.fa.fa-2x.fa-facebook-square
+            %a.social-media-share-link.facebook-link{'href' => "https://www.facebook.com/sharer/sharer.php?u=#{campaign_domain}#{campaign.link}&title=#{campaign.name}", 'target' => '_blank', 'aria-label' => 'Share campaign to Facebook'}
+              %i.fa.fa-2x.fa-facebook-square
 
 
-        %li.list-group-item.no-padding
+        %li.list-group-item.no-padding.signing-list-item
           %div.details.row
             - if selected_campaigns.include?(campaign.id)
 
