--- a/app/views/application/make_it_easy.html.haml
+++ b/app/views/application/make_it_easy.html.haml
@@ -46,12 +46,25 @@
               %button.btn.btn-primary.btn-lg.btn-block{type: 'button'}
                 Add All Campaigns
 
+      %div.row.view-style-row
+        %div.col-lg-12
+          %div.view-style-controls
+            %div.btn-group{"data-toggle" => "buttons"}
+              %label{class: "btn btn-outline-dark #{'active' if @view_style == 'grid'}"}
+                %input#grid-view-button{'autocomplete' => 'off', 'name' => 'grid-view', 'type' => 'radio', 'data-view-style' => 'grid'}/
+                Grid
+                %i.fa.fa-th
+              %label{class: "btn btn-outline-dark #{'active' if @view_style == 'list'}"}
+                %input#list-view-button{'autocomplete' => 'off', 'name' => 'list-view', 'type' => "radio", 'data-view-style' => 'list'}/
+                List
+                %i.fa.fa-bars
+
   %div.all-campaigns-body#main-content
     %div.container
       %div.row
         %div.campaign-list-container
           %div.row.campaign-list
-            = render partial: 'application/campaign', collection: @all_active_campaigns.sort{|x,y| x.name.length <=> y.name.length}, cached: -> campaign { [ campaign, campaigns_already_signed.include?(campaign.id), selected_campaigns.include?(campaign.id) ] }
+            = render partial: 'application/campaign', collection: @all_active_campaigns.sort{|x,y| x.name.length <=> y.name.length}, cached: -> campaign { [ campaign, campaigns_already_signed.include?(campaign.id), selected_campaigns.include?(campaign.id), @view_style ] }
 
 
 
@@ -64,6 +77,7 @@
       %input#search-terms{type: 'hidden', value: '[]'}
       %input#categories-filter.filter-terms{type: 'hidden', value: '[]', 'data-filter-type' => 'categories'}
       %input#locations-filter.filter-terms{type: 'hidden', value: '[]', 'data-filter-type' => 'locations'}
+      %input#view-style{type: 'hidden', value: @view_style}
 
 
       %div.footer-text
