Minor change to sticky footer hiddene color to blend in with static footer.

--- a/app/assets/stylesheets/make_it_easy.scss
+++ b/app/assets/stylesheets/make_it_easy.scss
@@ -86,7 +86,7 @@ main {
 }
 
 .sticky-footer.retracted {
-  background-color: #fff;
+  background-color: #f9f9f9;
   cursor: default;
   transform: translate(0rem, 5rem);
 }
