Filename and routename changes.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,7 @@
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
  @import 'footer';
- @import 'make_it_easy';
+ @import 'index';
  @import 'material-design-iconic-font.min';
  @import 'privacy';
  @import 'review';
