Fixing filename error on css import.

--- a/app/assets/stylesheets/campaigns_chunk.scss
+++ b/app/assets/stylesheets/campaigns_chunk.scss
@@ -208,3 +208,11 @@
   border-top: 1px solid #ccc;
   padding: 0.75rem 1.25rem;
 }
+
+.campaigns-chunk .explanation .campaigns .campaign .social-media-share-links a.social-media-share-link i.fa.fa-facebook-square {
+  color: #29487d;
+}
+
+.campaigns-chunk .explanation .campaigns .campaign .social-media-share-links a.social-media-share-link i.fa.fa-twitter-square {
+  color: #1da1f2;
+}
