--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -395,12 +395,12 @@ body.hasHover #filters .filter-buttons.locations .col.staten-island:hover {
 }
 
 .all-campaigns-body .campaign-list-container .campaign-list {
-  margin: 2rem 0 2rem;
-  padding: 0;
+  margin: 0;
+  padding: 2rem 0 1rem;
 }
 
 .all-campaigns-body .campaign-list-container .campaign-list.matching {
-  border-bottom: 2px solid #333;
+  border-bottom: 2px solid #666;
 }
 
 .all-campaigns-body .campaign-list-container .campaign-list.not-matching .row-item .card .campaign {
