--- a/app/assets/javascripts/analytics_tracker.js.erb
+++ b/app/assets/javascripts/analytics_tracker.js.erb
@@ -6,7 +6,8 @@ function AnalyticsTracker() {
     var _this = this;
     this.asyncList = [];
 
-    mixpanel.init("<%= Rails.application.secrets.mixpanel[:token] %>", {cross_subdomain_cookie: <%= Rails.env.development? %>}, {
+    mixpanel.init("<%= Rails.application.secrets.mixpanel[:token] %>", {
+      cross_subdomain_cookie: <%= !Rails.env.staging? %>,
       loaded: function() {
         for (var i = 0; i < _this.asyncList.length; i++) {
           func = _this.asyncList[i];
