Copy and hidden form field change.

--- a/app/views/application/acknowledgments.html.haml
+++ b/app/views/application/acknowledgments.html.haml
@@ -15,6 +15,14 @@
 
             %li
               %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt{'aria-hidden' => 'true'}
+              The staff and volunteers of
+              %a{href: 'https://transalt.org', 'aria-label' => 'Link to Transportation Alternatives\' homepage'}
+                Transportation Alternatives
+              %span{'aria-hidden' => 'true'}
+                for their indispensible work to make New York City's streets safe
+
+            %li
+              %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt{'aria-hidden' => 'true'}
               %a{href: 'https://twitter.com/zavoloklom', 'aria-label' => 'Link to Sergey Kupletsky\'s homepage'}
                 Sergey Kupletsky
               %span{'aria-hidden' => 'true'}
