Adding way to link to specific petitions.

--- a/app/assets/javascripts/analytics_tracker.js.erb
+++ b/app/assets/javascripts/analytics_tracker.js.erb
@@ -42,5 +42,5 @@ function AnalyticsTracker() {
 var tracker = new AnalyticsTracker();
 tracker.initialize();
 
-window.AnalyticsTracker = tracker;
+window.tracker = tracker;
 
